update views w/recent_videos method and add seed data

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,6 +1,6 @@
 %section.genre
-  %header.clearfix
-    %h1= @category.name
+  %header
+    %h3= @category.name
   %article.row
     - @category.videos.each do |video|
       .video.col-md-2
