--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,9 +1,10 @@
 - @categories.each do |category|
-  %article.video_category
+  %section.genre
     %header
-      %h3= link_to category.name, category
-    .videos.row
-      - category.videos.each do |video|
-        = link_to video, nil do 
-          = image_tag video.small_cover_URL
+      %h2= link_to category.name, category
+    %article.row
+      - category.recent_videos.each do |video|
+        .video.col-md-2
+          = link_to video, nil do 
+            = image_tag video.small_cover_URL
           
