--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -5,5 +5,5 @@
     - @category.videos.each do |video|
       .video.col-md-2
         = link_to video, nil do
-          = image_tag video.small_cover_URL
+          = image_tag video.small_cover_url
             
