--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -6,5 +6,5 @@
       - category.recent_videos.each do |video|
         .video.col-md-2
           = link_to video, nil do 
-            = image_tag video.small_cover_URL
+            = image_tag video.small_cover_url
           
