--- a/app/views/videos/search.html.haml
+++ b/app/views/videos/search.html.haml
@@ -3,4 +3,4 @@
     - @results.each do |video|
       .video.col-sm-2
         = link_to video, nil do 
-          = image_tag video.small_cover_URL
+          = image_tag video.small_cover_url
