--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -8,3 +8,34 @@
           %h3= @video.title
           %span Rating:
         %p= @video.description
+
+%section.reviews.container
+  .row
+    .col-sm-10.col-sm-offset-1
+      = bootstrap_form_for [@video, Review.new], layout: :vertical, label_col: 'col-sm-3', control_col: 'col-sm-6' do |f|
+        %fieldset
+          .form-group
+            .row
+              .col-sm-3
+                %label Rate This Video:
+                = f.select :rating, options_for_select([5,4,3,2,1].map { |number| [pluralize(number, "Star")] }), hide_label: true
+          .form-group
+            .row
+              .col-sm-8
+                %label Write a Review:
+                = f.text_area :content, hide_label: true, rows: 6
+        %fieldset.form-group.actions.clearfix
+          %input(type="submit" value="Submit" class="btn")
+          = link_to "Cancel", @video
+      %header
+        %h3 User Reviews (#{@reviews.count})
+      %ul
+        - @reviews.each do |review|
+          %article.review
+            %li.row
+              .col-sm-2
+                %span Rating: #{review.rating} / 5
+                %p by <a href="">#{review.user.full_name}</a>
+              .col-sm-8
+                %p= review.content
+                
