--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -8,6 +8,8 @@
           %h3= @video.title
           %span Rating:
         %p= @video.description
+        .actions
+          = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: 'btn btn-default'
 
 %section.reviews.container
   .row
