--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -6,18 +6,18 @@
       %li= link_to "Videos", videos_path
       %li= link_to "My Queue", my_queue_path
       %li= link_to "People"
-    %form.col-md-5.navbar-form(action="#{search_videos_path}" method="get")
+    = form_tag search_videos_path, :method => :get, class: 'col-md-5.navbar-form' do
       .form-group
-        %input.form-control(type="text" name="search_term" placeholder="Search for videos here")
-      %button.btn.btn-default(type="submit") Search
-    #user_links.pull-right
-      %ul
-        %li.dropdown
-          %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
-            = current_user.full_name
-            %b.caret
-          %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
-            %li
-              %a(href="#") Account
-              %a(href="#") Plan and Billing
-              = link_to "Sign Out", logout_path, method: 'delete'
+        = text_field_tag :search_term, "Search for videos here", class: 'form-control'
+        = submit_tag 'Search', class: 'btn btn-default'
+        #user_links.pull-right
+          %ul
+            %li.dropdown
+              %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
+                = current_user.full_name
+                %b.caret
+              %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
+                %li
+                  %a(href="#") Account
+                  %a(href="#") Plan and Billing
+                  = link_to "Sign Out", logout_path, method: 'delete'
