push logic to models, add ability for user to change ratings from queue

--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -20,7 +20,7 @@
             .row
               .col-sm-3
                 %label Rate This Video:
-                = f.select :rating, options_for_select([5,4,3,2,1].map { |number| [pluralize(number, "Star")] }), hide_label: true
+                = f.select :rating, options_for_video_reviews
           .form-group
             .row
               .col-sm-8
@@ -40,4 +40,3 @@
                 %p by <a href="">#{review.user.full_name}</a>
               .col-sm-8
                 %p= review.content
-                
