finish implementing password reset feature

--- a/app/views/password_resets/show.html.haml
+++ b/app/views/password_resets/show.html.haml
@@ -1,13 +1,10 @@
 %section.reset_password.container
   .row
     .col-sm-10.col-sm-offset-1
-      %form
+      = bootstrap_form_tag url: password_resets_path do |f|
         %header
           %h1 Reset Your Password
-        %fieldset.form-group
-          %label New Password
-          .row
-            .col-sm-4
-              %input.form-control(type="password")
-        %fieldset.form-group.action
-          %input(type="submit" value="Reset Password" class="btn btn-default")
+        .form-group
+          = f.password_field :password, label: 'New Password'
+          = hidden_field_tag :token, @token
+          = f.submit 'Reset Password'
