--- a/app/views/app_mailer/send_invitation_email.html.haml
+++ b/app/views/app_mailer/send_invitation_email.html.haml
@@ -2,4 +2,4 @@
   %body
     %p You have been invited to join MyFlix by #{@invitation.inviter.full_name}.
     %p #{@invitation.message}
-    %p= link_to "Accept this Invitation", "#"
+    %p= link_to "Accept this Invitation", register_with_token_url(@invitation.token)
