--- a/app/views/forgot_passwords/new.html.haml
+++ b/app/views/forgot_passwords/new.html.haml
@@ -1,11 +1,10 @@
 %section.forgot_password.container
   .row
     .col-sm-10.col-bg-offset-1
-      = bootstrap_form_tag url: forgot_passwords_path do |f|
-        %form.sign_in
-          %header
-            %h1 Forgot Password?
-            %p We will send you an email with a link that you can use to reset your password.
-          .form-group
-            = f.email_field :email, label: 'Email Address:'
-            = f.submit "Submit"
+      = bootstrap_form_tag url: forgot_passwords_path, class: 'sign-in', layout: :horizontal, control_col: 'col-sm-6' do |f|
+        %header
+          %h1 Forgot Password?
+          %p We will send you an email with a link that you can use to reset your password.
+        .form-group
+          = f.email_field :email, label: 'Email Address:'
+          = f.submit "Submit"
