--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -12,10 +12,11 @@
           %fieldset
             = f.text_field :title, class: "form-group"
             = f.select :category_id, options_for_select(Category.all.map {|category| [category.name, category.id]})
-            = f.text_area :description, rows: 8, class: "form-group"
-            = f.file_field :large_cover, class: "btn btn-file"
-            = f.file_field :small_cover, class: "btn btn-file"
-            
+            = f.text_area :description, rows: 8
+            = f.file_field :large_cover, class: "btn btn-sm"
+            = f.file_field :small_cover, class: "btn btn-sm"
+            = f.text_field :video_url, label: "Video URL"
+
           %fieldset.actions.form-group
             .col-sm-6.col-md-offset-3
               %input(type="submit" value="Add Video" class="btn btn-default")
