--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,6 +9,7 @@
           %span Rating:
         %p= @video.description
         .action
+          %a.btn.btn-primary(href="#{@video.video_url}") Watch Now
           = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: 'btn btn-default' unless current_user.queued_video?(@video)
 
 %section.reviews.container
