charge credit card on registration

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -21,4 +21,4 @@
                   = link_to "Invite a Friend", new_invitation_path
                   %a(href="#") Account
                   %a(href="#") Plan and Billing
-                  = link_to "Sign Out", logout_path, method: 'delete'
+                  = link_to "Sign Out", logout_path
