--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -15,15 +15,16 @@
         = f.text_field :full_name, label: "Full Name"
         = hidden_field_tag :invitation_token, @invitation_token
         %fieldset.credit_card
-          %span.payment-errors
+          .form-group.has-error
+            %span.payment-errors
           .form-group
-            %label.control-label.col-sm-2 Credit Card Number
+            %label.control-label.col-sm-2{for: "credit_card_number"} Credit Card Number
             .col-sm-6
-              %input.form-control(type="text" data-stripe='number')
+              %input.form-control#credit_card_number(type="text" data-stripe='number')
           .form-group
-            %label.control-label.col-sm-2 Security Code
+            %label.control-label.col-sm-2{for: "security_code"} Security Code
             .col-sm-6
-              %input.form-control(type="text" data-stripe='cvc')
+              %input.form-control#security_code(type="text" data-stripe='cvc')
           .form-group
             %label.control-label.col-sm-2 Expiration
             .col-sm-3
