updates per TA comments.

--- a/app/views/videos/advanced_search.html.haml
+++ b/app/views/videos/advanced_search.html.haml
@@ -32,7 +32,7 @@
       %article.video.row
         .video_data
           %figure.col-sm-2
-            = link_to video, nil do
+            = link_to video do
               = image_tag video.small_cover_url
           .video_body.col-sm-10
             %header
